# StG

./: .gitignore  CMakeLists.txt  README.md  main.cpp  result.txt  settings.json
encode/: encode.cpp
include/: Background.hpp  Bullet.hpp  BulletGenerator.hpp  Constants.h  DynamicObject.h  DynamicObject.hpp  Enemy.hpp  Game.hpp  GameObject.h  GameState.hpp  Hitbox.h  HitboxObject.h  HitboxObject.hpp  HitboxObject.tpp  LoadTextures.hpp  Player.h  Player.hpp  Text.hpp  UpdateFunctions.hpp  Utilities.h  Utilities.hpp  Wall.hpp  Window.h
include/base_classes/: Damage.hpp  DrawableObject.hpp  DynamicObject.hpp  FramedObject.hpp  GameObject.h  HealthObject.hpp  Hitbox.h  Hitbox.hpp  ShootingObject.hpp  SpriteObject.h
include/bullets/: Bullet.hpp  BulletGenerator.hpp  BulletUtils.hpp  UpdateFunctions.hpp
include/enemy/: Boss.hpp  Enemy.hpp  TestBoss.hpp
include/final_classes/: Background.hpp  Player.hpp  Text.hpp  Wall.hpp
include/helper_classes/: Animated.hpp  Audible.hpp  Damage.hpp  GameState.hpp  Hitbox.hpp
include/ui/: Button.hpp  HealthBar.hpp  Menu.hpp  Picture.hpp  Text.hpp  Ui.hpp
include/utilities/: ChangeControls.hpp  Controls.hpp  LoadFiles.hpp  Math.hpp  Random.hpp  Resources.hpp  Settings.hpp  UpdateFunctions.hpp  Utilities.hpp  Utils.hpp  Window.h
src/: Bullet.cpp  DrawableObject.cpp  DynamicObject.cpp  FramedObject.cpp  Game.cpp  GameObject.cpp  GameState.cpp  Hitbox.cpp  HitboxObject.cpp  Player.cpp  Resources.cpp  Settings.cpp  SpriteObject.cpp  TestBoss.cpp  Wall.cpp  Window.cpp
src/base_classes/: DynamicObject.cpp  FramedObject.cpp  GameObject.cpp
